# AI_BMT_GUI_Submitter_MacOS_ARM64

./: .gitignore  AI_BMT_GUI_Submitter_MacOS_ARM64.code-workspace  CMakeLists.txt  README.md  main.cpp
example/classification/cpu/: ImageClassification_CustomDataset_Interface_Implementation.cpp  ImageClassification_Implementaion.cpp  Readme.txt
example/llm/cpu/: llm_Implementation.cpp
example/objectDetection/cpu/: ObjectDetection_Implementation.cpp  Readme.txt
example/segmentation/cpu/: Readme.txt  Segmentation_Implementation.cpp
include/: ai_bmt_gui_caller.h  ai_bmt_interface.h
utils/: async_inference.cpp  async_inference.hpp  utils.cpp  utils.hpp
